tests/ui/feature-gates/feature-gate-macro-fragment-fields.stderr
error[E0658]: macro fragment fields are unstable
  --> $DIR/feature-gate-macro-fragment-fields.rs:5:22
   |
LL |     ($x:ident) => { ${x.field} };
   |                      ^^^^^^^^^
   |
   = note: see issue #147023 <https://github.com/rust-lang/rust/issues/147023> for more information
   = help: add `#![feature(macro_fragment_fields)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
