tests/ui/feature-gates/feature-gate-macro-fragment-fields.rs
#![crate_type = "lib"]

macro_rules! m {
    //~v ERROR: macro fragment fields are unstable
    ($x:ident) => { ${x.field} };
}
